--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://genesisk.github.io/kimbioni",
+  "homepage": "https://kimbioni.github.io/kimbioni",
   "name": "kim_portifolio",
   "private": true,
   "version": "0.0.0",
